[Read Anything] Fix color menu not hiding in high contrast mode
The original CSS approach to hide the menu didn't work reliably because
of display being overridden to handle overflow buttons.

Fixed: b/434013149
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6792983
Commit-Queue: Lauren Winston <lwinston@google.com>
Cr-Commit-Position: refs/heads/main@{#1493262}

--- a/chrome/browser/resources/side_panel/read_anything/read_anything_toolbar.css
+++ b/chrome/browser/resources/side_panel/read_anything/read_anything_toolbar.css
@@ -56,6 +56,17 @@
   margin: 0px;
 }
 
+/* Separate CSS classes are needed instead of setting the style directly so
+ * that when forced colors are active, the color menu isn't reshown through
+ * the code used to manage toolbar overflows. */
+.hidden {
+  display: none;
+}
+
+.visibility-hidden {
+  visibility: hidden;
+}
+
 .granularity-container-when-active-true {
   display: flex;
   flex-direction: row;
